--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,12 +1,75 @@
+html {
+    box-sizing: border-box;
+}
 
+*,*::before,*::after{
+    box-sizing: inherit;
+}
 
 /* Globales */
 a {
     text-decoration: none;
 }
 
+.hero {
+    background-image: url(../img/tienda1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: .2rem;    
+    height: 350px;
+    margin: 0 auto;
+    margin-top: 2rem;
+    width: 800px;
+}
 
-.boton{
+.titulo-principal {
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0 auto;
+}
+
+.nav-principal{
+    display: flex;
+    justify-content: space-around;    
+    border-top-style:groove;
+    border-color: #777171;
+    margin: 0 auto;
+    margin-top: 2rem;
+}
+.nav-principal a {
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+    margin-top: 1.5rem;
+    transition: 3.s;
+}
+.nav-principal a:hover {
+    text-decoration:underline;
+    font-size: 1.3rem;
+    transition: 3.s;
+}
+
+@media screen and (max-width: 768px){    
+    .titulo-principal {
+        text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        margin: 0 auto;
+    }
+    .nav-principal{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        margin-top: 2rem;
+    }
+    .nav-principal a {        
+        font-weight: bold;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        text-transform: uppercase;
+    }
+}
+
+/* .boton{
     background-color: rgb(82, 82, 237);
     transition: .5s;
     color: aliceblue;
@@ -21,4 +84,4 @@ a {
     cursor: pointer;
     background-color: rgb(19, 19, 152);
     transition: .5s;
-}
+} */
